--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:classth="http://www.w3.org/1999/xhtml">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
     <title>Sogne and their kommuner</title>
 </head>
 <body>
-
+<div class="container">
+    <h1 style="text-align: center">Sogne</h1>
+    <div class="row">
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Navn</th>
+                    <th>Positivprocent</th>
+                    <th>Nedlukket</th>
+                    <th>Dato for nedlukning</th>
+                    <th>Kommune</th>
+                    <th>Rediger</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="sogn : ${sogne}">
+                    <td th:text="${sogn.id}"/>
+                    <td th:text="${sogn.navn}"/>
+                    <td th:text="${sogn.positivProcent}"/>
+                    <td th:text="${sogn.getNedlukket()}"/>
+                    <td th:text="${sogn.datoForNedlukning}"/>
+                    <td th:text="${sogn.kommune.navn}"/>
+                    <td>
+                        <div class="btn-group">
+                            <a th:href="@{'/update/' + ${sogn.id}}" class="btn btn-warning">Opdater</a>
+                            <a th:href="@{'/delete/' + ${sogn.id}}" class="btn btn-danger">Slet</a>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="row">
+        <a href="create" class="btn btn-primary" role="button">Tilføj Sogn</a>
+    </div>
+    <div class="row">
+    <a href="create" class="btn btn-primary" role="button">Tilføj Kommune</a>
+</div>
+</div>
 </body>
 </html>
