--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,31 +12,33 @@
     <div class="row">
         <table class="table">
             <thead class="thead-dark">
-                <tr>
-                    <th>ID</th>
-                    <th>Navn</th>
-                    <th>Positivprocent</th>
-                    <th>Nedlukket</th>
-                    <th>Dato for nedlukning</th>
-                    <th>Kommune</th>
-                    <th>Rediger</th>
-                </tr>
+            <tr>
+                <th>ID</th>
+                <th>Sogne kode</th>
+                <th>Navn</th>
+                <th>Positivprocent</th>
+                <th>Nedlukket</th>
+                <th>Dato for nedlukning</th>
+                <th>Kommune</th>
+                <th>Rediger</th>
+            </tr>
             </thead>
             <tbody>
-                <tr th:each="sogn : ${sogne}">
-                    <td th:text="${sogn.id}"/>
-                    <td th:text="${sogn.navn}"/>
-                    <td th:text="${sogn.positivProcent}"/>
-                    <td th:text="${sogn.getNedlukket()}"/>
-                    <td th:text="${sogn.datoForNedlukning}"/>
-                    <td th:text="${sogn.kommune.navn}"/>
-                    <td>
-                        <div class="btn-group">
-                            <a th:href="@{'/update/' + ${sogn.id}}" class="btn btn-warning">Opdater</a>
-                            <a th:href="@{'/delete/' + ${sogn.id}}" class="btn btn-danger">Slet</a>
-                        </div>
-                    </td>
-                </tr>
+            <tr th:each="sogn : ${sogne}">
+                <td th:text="${sogn.id}"/>
+                <td th:text="${sogn.kode}"/>
+                <td th:text="${sogn.navn}"/>
+                <td th:text="${sogn.positivProcent}"/>
+                <td th:text="${sogn.getNedlukket()}"/>
+                <td th:text="${sogn.datoForNedlukning}"/>
+                <td th:text="${sogn.kommune.navn}"/>
+                <td>
+                    <div class="btn-group">
+                        <a th:href="@{'/update/' + ${sogn.id}}" class="btn btn-warning">Opdater</a>
+                        <a th:href="@{'/delete/' + ${sogn.id}}" class="btn btn-danger">Slet</a>
+                    </div>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
@@ -44,8 +46,8 @@
         <a href="create" class="btn btn-primary" role="button">Tilføj Sogn</a>
     </div>
     <div class="row">
-    <a href="create" class="btn btn-primary" role="button">Tilføj Kommune</a>
-</div>
+        <a href="kommuner" class="btn btn-primary" role="button">Vis kommuner</a>
+    </div>
 </div>
 </body>
 </html>
