--- a/src/main/resources/templates/kommuner.html
+++ b/src/main/resources/templates/kommuner.html
@@ -17,7 +17,6 @@
                 <th>Kode</th>
                 <th>Navn</th>
                 <th>Positiv procent</th>
-                <th>Rediger</th>
             </tr>
             </thead>
             <tbody>
@@ -26,15 +25,15 @@
                 <td th:text="${kommune.kode}"/>
                 <td th:text="${kommune.navn}"/>
                 <td th:text="${kommune.getAveragePositivProcent()}"/>
-                <td>
-                    <div class="btn-group">
-                        <a th:href="@{'/update/' + ${kommune.id}}" class="btn btn-warning">Opdater</a>
-                        <a th:href="@{'/delete/' + ${kommune.id}}" class="btn btn-danger">Slet</a>
-                    </div>
-                </td>
             </tr>
             </tbody>
         </table>
+    </div>
+    <div class="row">
+        <a href="createKommune" class="btn btn-primary" role="button">Tilføj Kommune</a>
+    </div>
+    <div class="row">
+        <a href="/" class="btn btn-secondary" role="button">Hjem</a>
     </div>
 </div>
 </body>
