added test and made small finishes

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="row justify-content-center">
-    <h1>Tilføj</h1>
+    <h1>Tilføj sogn</h1>
   </div>
   <div class="row">
     <form action="/create" method="post" th:object="${sogn}">
@@ -31,7 +31,7 @@
       </div>
       <p id="space"></p>
       <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success" role="button">
+        <input type="submit" value="Gem" class="btn btn-success" role="button">
       </div>
     </form>
   </div>
