--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Opdater</h1>
+    <h1>Opdater sogn</h1>
     <div class="row">
         <form action="/update" th:object="${sogn}" method="post">
             <div class="form-group">
@@ -34,7 +34,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="UPDATE" class="btn btn-success" role="button">
+                    <input type="submit" value="Gem" class="btn btn-success" role="button">
                 </div>
         </form>
     </div>
