--- a/src/main/resources/templates/createKommune.html
+++ b/src/main/resources/templates/createKommune.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="row justify-content-center">
-    <h1>Tilføj</h1>
+    <h1>Tilføj kommune</h1>
   </div>
   <div class="row">
     <form action="/createKommune" method="post" th:object="${kommune}">
@@ -19,7 +19,7 @@
       </div>
       <p id="space"></p>
       <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success" role="button">
+        <input type="submit" value="Gem" class="btn btn-success" role="button">
       </div>
     </form>
   </div>
